--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -676,43 +676,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n",
-      "\n"
+      "['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n"
      ]
     }
    ],
    "source": [
     "# Exercício 2 - Crie uma lista de 5 objetos e imprima na tela\n",
     "listaObjetos = ['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n",
-    "print(listaObjetos)\n",
-    "print()"
+    "print(listaObjetos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Todo dia ela faz tudo sempre igual\n"
+      "Olá, meu nome é Guilherme e moro em São Paulo\n"
      ]
     }
    ],
    "source": [
     "# Exercício 3 - Crie duas strings e concatene as duas em uma terceira string\n",
-    "string1 = 'Todo dia ela'\n",
-    "string2 = 'faz tudo sempre igual'\n",
-    "string3 = string1 +' '+ string2\n",
+    "string1 = 'Olá, meu nome é Guilherme'\n",
+    "string2 = 'e moro em São Paulo'\n",
+    "string3 = string1 + ' ' + string2\n",
     "print(string3)"
    ]
   },
@@ -830,7 +828,7 @@
    ],
    "source": [
     "# Exercício 9 - Crie uma lista de 4 elementos. O primeiro elemento deve ser uma string, \n",
-    "# o segundo uma tupla de 2 elementos, o terceiro um dcionário com 2 chaves e 2 valores e \n",
+    "# o segundo uma tupla de 2 elementos, o terceiro um dicionário com 2 chaves e 2 valores e \n",
     "# o quarto elemento um valor do tipo float.\n",
     "# Imprima a lista.\n",
     "lista2 = ['Olá Mundo!', ('Batata', 13), {'chave1':22, 'chave2':34}, 4.67]\n",
