--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,13 @@
       "3\n",
       "1\n",
       "158\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Você pode acessar as redes sociais sem supervisão!\n",
       "\n",
       "Este número não é primo\n",
@@ -702,7 +708,14 @@
       "D\n",
       "O\n",
       "S\n",
-      "None\n"
+      "None\n",
+      "16\n",
+      "9\n",
+      "4\n",
+      "27\n",
+      "P\n",
+      "nohtyP\n",
+      "5\n"
      ]
     }
    ],
@@ -770,7 +783,31 @@
     "\n",
     "print(split_string_letras(texto))\n",
     "\n",
-    "\n"
+    "# Definindo uma função\n",
+    "def potencia(num):\n",
+    "    resultado = num ** 2\n",
+    "    return resultado\n",
+    "print(potencia(4))\n",
+    "\n",
+    "def potencia(num):\n",
+    "    return num ** 2\n",
+    "print(potencia(3))\n",
+    "\n",
+    "def potencia(num): return num ** 2\n",
+    "print(potencia(2))\n",
+    "\n",
+    "# Definindo uma função lambda (função anônima)\n",
+    "potencia = lambda num: num ** 3\n",
+    "print(potencia(3))\n",
+    "\n",
+    "first = lambda s: s[0]\n",
+    "print(first('Python'))\n",
+    "\n",
+    "reverso = lambda s: s[::-1]\n",
+    "print(reverso('Python'))\n",
+    "\n",
+    "addNum = lambda x,y: x + y\n",
+    "print(addNum(2,3))"
    ]
   }
  ],
