--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -815,15 +815,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List Comprehension"
+    "### List Comprehension e Dict Comprehension."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "\n",
+      "[0, 1, 2, 3, 4]\n",
+      "\n",
+      "['melancia', 'manga', 'amora']\n",
+      "\n",
+      "['melancia', 'manga', 'amora']\n",
+      "\n",
+      "{'Bob': 68, 'Michel': 84, 'Zico': 57, 'Ana': 93}\n",
+      "\n",
+      "{'Bob': 'Reprovado', 'Michel': 'Aprovado', 'Zico': 'Reprovado', 'Ana': 'Aprovado'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List Comprehension que imprime os números até 10 e grava em uma lista Python\n",
+    "lista_numeros = [x for x in range(10)]\n",
+    "print(lista_numeros)\n",
+    "print()\n",
+    "\n",
+    "# List Comprehension que imprime os números menores que 5 em um intervalo de 1 a 10\n",
+    "lista_numeros = [x for x in range(10) if x < 5]\n",
+    "print(lista_numeros)\n",
+    "print()\n",
+    "\n",
+    "# Loop tradiconal para buscar as palavras com a letra \"m\"\n",
+    "lista_frutas = ['banana', 'abacate', 'melancia', 'cereja', 'manga', 'amora']\n",
+    "nova_lista = []\n",
+    "\n",
+    "for x in lista_frutas:\n",
+    "    if 'm' in x:\n",
+    "        nova_lista.append(x)\n",
+    "print(nova_lista)\n",
+    "print()\n",
+    "\n",
+    "# Mesmo resultado anterior, mas com list comprehension\n",
+    "nova_lista = [x for x in lista_frutas if 'm' in x]\n",
+    "print(nova_lista)\n",
+    "print()\n",
+    "\n",
+    "# Dict comprehension com as notas dos alunos\n",
+    "dict_alunos = {'Bob':68, 'Michel':84, 'Zico':57, 'Ana':93}\n",
+    "dict_alunos_status = {k:v for (k,v) in dict_alunos.items()}\n",
+    "print(dict_alunos_status)\n",
+    "print()\n",
+    "\n",
+    "# Dict comprehension para saber se o aluno foi aprovado\n",
+    "dict_alunos_status = {k: ('Aprovado' if v > 70 else 'Reprovado') for (k,v) in dict_alunos.items()}\n",
+    "print(dict_alunos_status)"
+   ]
   }
  ],
  "metadata": {
