--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -782,6 +782,7 @@
     "        print(letra)\n",
     "\n",
     "print(split_string_letras(texto))\n",
+    "print()\n",
     "\n",
     "# Definindo uma função\n",
     "def potencia(num):\n",
