--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -876,9 +876,7 @@
     "\n",
     "# Dict comprehension para saber se o aluno foi aprovado\n",
     "dict_alunos_status = {k: ('Aprovado' if v > 70 else 'Reprovado') for (k,v) in dict_alunos.items()}\n",
-    "print(dict_alunos_status) \n",
-    "\n",
-    "\n"
+    "print(dict_alunos_status) \n"
    ]
   }
  ],
