--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1,57 +1,50 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calcular a Área de um Paralelograma."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bem-vindo ao Calculador de Área do Paralelograma\n",
+      "Bem-vindo ao Calculador de Área do Paralelogramo\n",
+      "A área do paralelogramo é 24.0\n",
       "\n",
-      "A área do paralelograma é 0.00\n"
+      " A área do paralelogramo é 24.000 \n"
      ]
     }
    ],
    "source": [
-    "print(\"Bem-vindo ao Calculador de Área do Paralelograma\")\n",
-    "\n",
-    "base = float(input(\"Digite o valor da Base: \"))\n",
-    "altura = float(input(\"Digite o valor da Altura: \"))\n",
-    "\n",
+    "print(f'Bem-vindo ao Calculador de Área do Paralelogramo')\n",
+    "base = []\n",
+    "base = float(input(f'Insira o comprimeto da base: '))\n",
+    "altura = []\n",
+    "altura = float(input(f'Insira a altura: '))\n",
     "area = base * altura\n",
-    "\n",
-    "print(f\"\\nA área do paralelograma é {area:.2f}\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calculadora Simples.\n"
+    "print(f'A área do paralelograma é',area)\n",
+    "print(f'\\n A área do paralelograma é {area:.2f} ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bem-vindo a calculadora\n",
+      "Bem-vindo a calculadora\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não é possível dividir por zero\n",
+      "\n",
       "Não é possível dividir por zero\n",
       "\n",
       "Operação Inválida.\n"
@@ -85,46 +78,7 @@
     "    num = num + 1    \n",
     "\n",
     "if num != 1:\n",
-    "    print(f'O resultado é {conta:.2f}') "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Algoritmo Bubble Sort."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n"
-     ]
-    }
-   ],
-   "source": [
-    "lista = [6, 3, 12, 7, 5, 19, 66, 45, 54, 24, 77, 22, 91, 33, 17]\n",
-    "\n",
-    "def bubble_sort(arr):\n",
-    "    \n",
-    "    N = len(arr)\n",
-    "    \n",
-    "    for i in range(0, N):\n",
-    "        for j in range(0, N-i-1):\n",
-    "            if arr[j] > arr[j+1]:\n",
-    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
-    "                \n",
-    "    return arr  \n",
-    "\n",
-    "    \n",
-    "print(bubble_sort(lista))  "
+    "    print(f'O resultado é {conta:.2f}') \n"
    ]
   }
  ],
@@ -145,8 +99,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
