--- a/Curso Python - Nível Introdutório/01IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/01IntroducaLogicaProgramacao.ipynb
@@ -85,7 +85,9 @@
     "    num = num + 1    \n",
     "\n",
     "if num != 1:\n",
-    "    print(f'O resultado é {conta:.2f}') "
+    "    print(f'O resultado é {conta:.2f}') \n",
+    "\n",
+    "    "
    ]
   },
   {
