--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -78,8 +78,16 @@
     "    num = num + 1    \n",
     "\n",
     "if num != 1:\n",
-    "    print(f'O resultado é {conta:.2f}') \n"
+    "    print(f'O resultado é {conta:.2f}') \n",
+    "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
