--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -91,15 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n"
+     ]
+    }
+   ],
    "source": [
-    "lista = [6, 3, 12, 7, 5, 19, 66, 45, 54, 24, 77, 22, 91, 33, 17]\n",
+    "lista1 = [6, 3, 12, 7, 5, 19, 66, 45, 54, 24, 77, 22, 91, 33, 17]\n",
     "\n",
     "def bubble_sort(arr):\n",
+    "    n = len(arr)               #para ver o tamanho da lista\n",
+    "    for i in range(n):\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if arr[j] > arr [j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
     "\n",
+    "    return arr\n",
     "\n",
+    "print(bubble_sort(lista1))\n",
     "    \n",
     "\n",
     "    "
