--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -91,19 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n"
+      "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n",
+      "[0, 1, 2, 3, 4, 5, 21, 23, 44, 78, 89]\n"
      ]
     }
    ],
    "source": [
     "lista1 = [6, 3, 12, 7, 5, 19, 66, 45, 54, 24, 77, 22, 91, 33, 17]\n",
+    "lista2 = [3,4,5,78,89,23,1,0,44,2,21]\n",
     "\n",
     "def bubble_sort(arr):\n",
     "    n = len(arr)               #para ver o tamanho da lista\n",
@@ -115,6 +117,7 @@
     "    return arr\n",
     "\n",
     "print(bubble_sort(lista1))\n",
+    "print(bubble_sort(lista2))\n",
     "    \n",
     "\n",
     "    "
