--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -119,6 +119,7 @@
     "print(bubble_sort(lista1))\n",
     "print(bubble_sort(lista2))\n",
     "\n",
+    "print\n",
     "\n",
     "    \n",
     "\n",
