--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -118,6 +118,7 @@
     "\n",
     "print(bubble_sort(lista1))\n",
     "print(bubble_sort(lista2))\n",
+    "print()\n",
     "\n",
     "\n",
     "    \n",
