--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -204,9 +204,69 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura, largura = 2, 4\n",
+    "base = altura * 2 + largura * 4\n",
+    "print(base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob Marley\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome1, nome2 = \"Bob\", \"Marley\"\n",
+    "nomeInteiro = nome1 + \" \" + nome2\n",
+    "print(nomeInteiro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testando \n",
+      "Strings \n",
+      "Em \n",
+      "Python \n",
+      "Data Science Academy\n",
+      "ata \n",
+      "Data Science Academy me ensina python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Testando \\nStrings \\nEm \\nPython ')\n",
+    "s = 'Data Science Academy'\n",
+    "print(s)\n",
+    "print(s[1:5])\n",
+    "print(s + \" \" + \"me ensina python\")\n"
+   ]
   }
  ],
  "metadata": {
