--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -128,43 +128,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(\"4\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3125"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5 ** 5"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -180,27 +143,10 @@
     }
    ],
    "source": [
-    "15 % 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2 // 1.3"
+    "print(type(\"4\"))\n",
+    "15 % 6\n",
+    "2 // 1.3\n",
+    "5 ** 5"
    ]
   },
   {
@@ -243,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +202,19 @@
       "Python \n",
       "Data Science Academy\n",
       "ata \n",
-      "Data Science Academy me ensina python\n"
+      "Data Science Academy me ensina python\n",
+      "DATA SCIENCE ACADEMY\n",
+      "data science academy\n",
+      "['Data', 'Science', 'Academy']\n",
+      "['Data Sci', 'nc', ' Acad', 'my']\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\n",
+      "False\n",
+      "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
+      "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n"
      ]
     }
    ],
@@ -265,8 +223,34 @@
     "s = 'Data Science Academy'\n",
     "print(s)\n",
     "print(s[1:5])\n",
-    "print(s + \" \" + \"me ensina python\")\n"
+    "print(s + \" \" + \"me ensina python\")\n",
+    "print(s.upper())\n",
+    "print(s.lower())\n",
+    "print(s.split())\n",
+    "print(s.split('e'))\n",
+    "\n",
+    "print(s.isalnum())\n",
+    "print(s.islower())\n",
+    "print(s.isspace())\n",
+    "print(s.endswith('n'))\n",
+    "print()\n",
+    "\n",
+    "l = 'Sem nada mais'\n",
+    "print(s == l)\n",
+    "\n",
+    "n = \"maria.joana.carlos.marcos.luiz.felipe.gabriel\"\n",
+    "print(n.split(\".\"))\n",
+    "\n",
+    "o = \"maria/joana/carlos/marcos/luiz/felipe/gabriel\"\n",
+    "print(o.split(\"/\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
