--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -242,7 +242,10 @@
     "print(n.split(\".\"))\n",
     "\n",
     "o = \"maria/joana/carlos/marcos/luiz/felipe/gabriel\"\n",
-    "print(o.split(\"/\"))\n"
+    "print(o.split(\"/\"))\n",
+    "\n",
+    "\n",
+    "q = "
    ]
   },
   {
