--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -243,7 +243,8 @@
     "\n",
     "o = \"maria/joana/carlos/marcos/luiz/felipe/gabriel\"\n",
     "print(o.split(\"/\"))\n",
-    "\n"
+    "\n",
+    "n = \"não posso\""
    ]
   },
   {
