--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -214,7 +214,8 @@
       "\n",
       "False\n",
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
-      "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n"
+      "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
+      "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n"
      ]
     }
    ],
@@ -244,7 +245,8 @@
     "o = \"maria/joana/carlos/marcos/luiz/felipe/gabriel\"\n",
     "print(o.split(\"/\"))\n",
     "\n",
-    "n = \"não posso\""
+    "p = \"gabriel-luiz-carlos-marcos-margarete-marcos\"\n",
+    "print(p.split(\"-\"))"
    ]
   },
   {
