--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,8 @@
       "False\n",
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
-      "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n"
+      "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n",
+      "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n"
      ]
     }
    ],
@@ -246,7 +247,10 @@
     "print(o.split(\"/\"))\n",
     "\n",
     "p = \"gabriel-luiz-carlos-marcos-margarete-marcos\"\n",
-    "print(p.split(\"-\"))"
+    "print(p.split(\"-\"))\n",
+    "\n",
+    "q = \"julio_gabriel_marcos_giovana_fred\"\n",
+    "print(q.split('_'))"
    ]
   },
   {
