--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -250,7 +250,9 @@
     "print(p.split(\"-\"))\n",
     "\n",
     "q = \"julio_gabriel_marcos_giovana_fred\"\n",
-    "print(q.split('_'))"
+    "print(q.split('_'))\n",
+    "\n",
+    "r "
    ]
   },
   {
