--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,8 @@
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
       "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n",
-      "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n"
+      "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n",
+      "['luis', 'Gabriel', 'Marcos', 'João']\n"
      ]
     }
    ],
@@ -250,9 +251,10 @@
     "print(p.split(\"-\"))\n",
     "\n",
     "q = \"julio_gabriel_marcos_giovana_fred\"\n",
-    "print(q.split('_'))\n",
+    "print(q.split(\"_\"))\n",
     "\n",
-    "r "
+    "r = \"luis=Gabriel=Marcos=João\"\n",
+    "print(r.split(\"=\"))"
    ]
   },
   {
