--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,8 @@
       "['maria', 'joana', 'carlos', 'marcos', 'luiz', 'felipe', 'gabriel']\n",
       "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n",
       "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n",
-      "['luis', 'Gabriel', 'Marcos', 'João']\n"
+      "['luis', 'Gabriel', 'Marcos', 'João']\n",
+      "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n"
      ]
     }
    ],
@@ -254,8 +255,27 @@
     "print(q.split(\"_\"))\n",
     "\n",
     "r = \"luis=Gabriel=Marcos=João\"\n",
-    "print(r.split(\"=\"))"
+    "print(r.split(\"=\"))\n",
+    "\n",
+    "s = \"Luiza*Gabriel*Marcos*João*Suzana\"\n",
+    "print(s.split(\"*\"))\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
