--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +257,10 @@
     "r = \"luis=Gabriel=Marcos=João\"\n",
     "print(r.split(\"=\"))\n",
     "\n",
-    "s = \"Luiza*Gabriel*Marcos*João*Suzana\"\n",
-    "print(s.split(\"*\"))\n",
+    "t = \"Luiza*Gabriel*Marcos*João*Suzana\"\n",
+    "print(t.split(\"*\"))\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
