--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -218,7 +218,8 @@
       "['gabriel', 'luiz', 'carlos', 'marcos', 'margarete', 'marcos']\n",
       "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n",
       "['luis', 'Gabriel', 'Marcos', 'João']\n",
-      "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n"
+      "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n",
+      "['Luiz', 'João', 'Marcos', 'Astrid', 'Manoel']\n"
      ]
     }
    ],
@@ -260,7 +261,8 @@
     "t = \"Luiza*Gabriel*Marcos*João*Suzana\"\n",
     "print(t.split(\"*\"))\n",
     "\n",
-    "\n",
+    "u = \"Luiz?João?Marcos?Astrid?Manoel\"\n",
+    "print(u.split(\"?\"))\n",
     "\n"
    ]
   },
