--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -275,11 +275,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n"
+      "Testando\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(f'Testando')"
+   ]
   },
   {
    "cell_type": "code",
