--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -263,7 +263,8 @@
     "\n",
     "u = \"Luiz?João?Marcos?Astrid?Manoel\"\n",
     "print(u.split(\"?\"))\n",
-    "\n"
+    "\n",
+    "print('oi')"
    ]
   },
   {
