--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -262,9 +262,7 @@
     "print(t.split(\"*\"))\n",
     "\n",
     "u = \"Luiz?João?Marcos?Astrid?Manoel\"\n",
-    "print(u.split(\"?\"))\n",
-    "\n",
-    "print('oi')"
+    "print(u.split(\"?\"))"
    ]
   },
   {
