--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -262,7 +262,8 @@
     "print(t.split(\"*\"))\n",
     "\n",
     "u = \"Luiz?João?Marcos?Astrid?Manoel\"\n",
-    "print(u.split(\"?\"))"
+    "print(u.split(\"?\"))\n",
+    "\n"
    ]
   },
   {
