--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,9 @@
       "['julio', 'gabriel', 'marcos', 'giovana', 'fred']\n",
       "['luis', 'Gabriel', 'Marcos', 'João']\n",
       "['Luiza', 'Gabriel', 'Marcos', 'João', 'Suzana']\n",
-      "['Luiz', 'João', 'Marcos', 'Astrid', 'Manoel']\n"
+      "['Luiz', 'João', 'Marcos', 'Astrid', 'Manoel']\n",
+      "['Fabiano', 'Gustavo', 'Marcelo', 'Jonas', 'Leo']\n",
+      "OLÁ, TODOS NÓS QUEREMOS MOSTRAR QUANTAS VEZES NÓS CONSEGUIMOS IR ATÉ O TOPO DA MONTANHA E RETORNAR SEM NENHUM PROBLEMA.\n"
      ]
     }
    ],
@@ -263,7 +265,12 @@
     "\n",
     "u = \"Luiz?João?Marcos?Astrid?Manoel\"\n",
     "print(u.split(\"?\"))\n",
-    "\n"
+    "\n",
+    "v = \"Fabiano,Gustavo,Marcelo,Jonas,Leo\"\n",
+    "print(v.split(','))\n",
+    "\n",
+    "w = \"olá, todos nós queremos mostrar quantas vezes nós conseguimos ir até o topo da montanha e retornar sem nenhum problema.\"\n",
+    "print(w.upper())"
    ]
   },
   {
