--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,8 @@
      "output_type": "stream",
      "text": [
       "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n",
-      "[0, 1, 2, 3, 4, 5, 21, 23, 44, 78, 89]\n"
+      "[0, 1, 2, 3, 4, 5, 21, 23, 44, 78, 89]\n",
+      "\n"
      ]
     }
    ],
@@ -118,35 +119,30 @@
     "\n",
     "print(bubble_sort(lista1))\n",
     "print(bubble_sort(lista2))\n",
-    "print()\n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    "
+    "print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "3\n",
+      "1.0\n",
+      "3125\n"
+     ]
     }
    ],
    "source": [
     "print(type(\"4\"))\n",
-    "15 % 6\n",
-    "2 // 1.3\n",
-    "5 ** 5"
+    "print(15 % 6)\n",
+    "print(2 // 1.3)\n",
+    "print(5 ** 5)"
    ]
   },
   {
@@ -275,10 +271,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['Arroz, feijão, tomate, leite']\n",
+      "<class 'list'>\n",
+      "['Arroz', 'Feijão', 'Tomate', 'Leite']\n",
+      "Tomate\n",
+      "<class 'list'>\n",
+      "[23, 100, 'Cientista de Dados']\n",
+      "23 100 Cientista de Dados\n",
+      "<class 'list'>\n",
+      "['Laranja', 'Maça', 'Abacaxi', 'Uva']\n",
+      "['Laranja', 'Maça', 'Abacate', 'Uva']\n",
+      "['Laranja', 'Abacate', 'Uva']\n",
+      "\n",
+      "[[1, 2, 3], [2, 3, 4], [5, 6, 7]]\n",
+      "[1, 2, 3]\n",
+      "2\n",
+      "10.1\n",
+      "12.3\n",
+      "160\n",
+      "162.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Listas parte 1\n",
+    "\n",
+    "lista1 = [\"Arroz, feijão, tomate, leite\"]\n",
+    "print(type(lista1))\n",
+    "print(lista1)\n",
+    "lista2 = ['Arroz', 'Feijão', 'Tomate', 'Leite']\n",
+    "print(type(lista2))\n",
+    "print(lista2)\n",
+    "print(lista2[2])\n",
+    "lista3 = [23, 100, \"Cientista de Dados\"]\n",
+    "print(type(lista3))\n",
+    "print(lista3)\n",
+    "item1 = lista3[0]\n",
+    "item2 = lista3[1]\n",
+    "item3 = lista3[2]\n",
+    "print(item1, item2, item3)\n",
+    "lista4 = [\"Laranja\", \"Maça\", \"Abacaxi\", \"Uva\"]\n",
+    "print(type(lista4))\n",
+    "print(lista4)\n",
+    "lista4[2] = \"Abacate\"\n",
+    "print(lista4)\n",
+    "del(lista4[1])\n",
+    "print(lista4)\n",
+    "print()\n",
+    "\n",
+    "listas = [[1,2,3], [2,3,4], [5,6,7]]\n",
+    "print(listas)\n",
+    "print(listas[0])\n",
+    "a = listas[0]\n",
+    "b = a[1]\n",
+    "print(b)\n",
+    "listas2 = [[1,2,3], [10,15,14], [10.1,8.7,2.3]]\n",
+    "print(listas2[2][0])\n",
+    "c = listas2[2][2]\n",
+    "print(c + 10)\n",
+    "d = (listas2[0][1] + listas2[1][2]) * 10\n",
+    "print(d)\n",
+    "e = c + d\n",
+    "print(e)\n",
+    "\n",
+    "lista5 = [3,7,10]\n",
+    "lista6 = [17,19,22]\n",
+    "listas3 = lista5 + lista6\n"
+   ]
   }
  ],
  "metadata": {
