--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,10 @@
       "10.1\n",
       "12.3\n",
       "160\n",
-      "162.3\n"
+      "162.3\n",
+      "[3, 7, 10, 17, 19, 22]\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -344,7 +347,61 @@
     "\n",
     "lista5 = [3,7,10]\n",
     "lista6 = [17,19,22]\n",
-    "listas3 = lista5 + lista6\n"
+    "listas3 = lista5 + lista6\n",
+    "print(listas3)\n",
+    "print(7 in listas3)\n",
+    "print(5 in listas3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-3.4\n",
+      "50\n",
+      "['Cientista de Dados', 'Engenheiro de Dados', 'Analista de Dados', 'Engenheiro de IA']\n",
+      "['Cientista de Dados', 'Engenheiro de Dados', 'Analista de Dados', 'Engenheiro de IA', 'Engenheiro de IA']\n",
+      "2\n",
+      "\n",
+      "[]\n",
+      "['10']\n",
+      "['10', '50']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Listas parte 2\n",
+    "\n",
+    "listaNumeros = [10,20,50,-3.4]\n",
+    "print(len(listaNumeros))\n",
+    "print(min(listaNumeros))\n",
+    "print(max(listaNumeros))\n",
+    "\n",
+    "listaCarreiras = [\"Cientista de Dados\",\"Engenheiro de Dados\",\"Analista de Dados\"]\n",
+    "listaCarreiras.append(\"Engenheiro de IA\")\n",
+    "print(listaCarreiras)\n",
+    "listaCarreiras.append(\"Engenheiro de IA\")\n",
+    "print(listaCarreiras)\n",
+    "print(listaCarreiras.count(\"Engenheiro de IA\"))\n",
+    "print()\n",
+    "\n",
+    "#Criando uma lista vazia\n",
+    "\n",
+    "listaVazia = []\n",
+    "print(listaVazia)\n",
+    "listaVazia.append(\"10\")\n",
+    "print(listaVazia)\n",
+    "listaVazia.append(\"50\")\n",
+    "print(listaVazia)\n",
+    "print()\n",
+    "\n"
    ]
   }
  ],
