--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,16 @@
       "[]\n",
       "['10']\n",
       "['10', '50']\n",
-      "\n"
+      "\n",
+      "[]\n",
+      "['Macaco']\n",
+      "1\n",
+      "\n",
+      "[3, 5, 6, 1, 2, 5, 10]\n",
+      "\n",
+      "['Manaus', 'São Paulo', 'Rio de Janeiro']\n",
+      "['Manaus', 'São Paulo', 'Rio de Janeiro', 'Porto Alegre', 'Curitiba']\n",
+      "2\n"
      ]
     }
    ],
@@ -401,7 +410,27 @@
     "listaVazia.append(\"50\")\n",
     "print(listaVazia)\n",
     "print()\n",
-    "\n"
+    "\n",
+    "listaVazia2 = []\n",
+    "print(listaVazia2)\n",
+    "listaVazia2.append('Macaco')\n",
+    "print(listaVazia2)\n",
+    "listaVazia2.append('Jacaré')\n",
+    "print(listaVazia2.count('Jacaré'))\n",
+    "print()\n",
+    "\n",
+    "listaAntiga = [1,2,5,10]\n",
+    "listaNova = [3,5,6]\n",
+    "for item in listaAntiga:\n",
+    "    listaNova.append(item)\n",
+    "print(listaNova)\n",
+    "print()\n",
+    "\n",
+    "listaCidades = ['Manaus', 'São Paulo', 'Rio de Janeiro']\n",
+    "print(listaCidades)\n",
+    "listaCidades.extend(['Porto Alegre', 'Curitiba'])\n",
+    "print(listaCidades)\n",
+    "print(listaCidades.index('Rio de Janeiro'))\n"
    ]
   }
  ],
