--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -430,7 +430,9 @@
     "print(listaCidades)\n",
     "listaCidades.extend(['Porto Alegre', 'Curitiba'])\n",
     "print(listaCidades)\n",
-    "print(listaCidades.index('Rio de Janeiro'))\n"
+    "print(listaCidades.index('Rio de Janeiro'))\n",
+    "\n",
+    "print()"
    ]
   }
  ],
