--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,16 @@
       "\n",
       "['Manaus', 'São Paulo', 'Rio de Janeiro']\n",
       "['Manaus', 'São Paulo', 'Rio de Janeiro', 'Porto Alegre', 'Curitiba']\n",
-      "2\n"
+      "2\n",
+      "\n",
+      "['Penha', 'Tatuapé', 'Pinheiros']\n",
+      "['Vila Matilde', 'Patriarca']\n",
+      "['Penha', 'Tatuapé', 'Pinheiros', 'Vila Matilde', 'Patriarca']\n",
+      "['Penha', 'Tatuapé', 'Pinheiros', 'Vila Matilde', 'Patriarca', 'Itaquera']\n",
+      "\n",
+      "['Jabaquara', 'Saude', 'Vila Mariana', 'Santa Cruz']\n",
+      "['Jabaquara', 'Vila Mariana', 'Santa Cruz']\n",
+      "<built-in method upper of str object at 0x000001CD1D8A0E70>\n"
      ]
     }
    ],
@@ -431,8 +440,26 @@
     "listaCidades.extend(['Porto Alegre', 'Curitiba'])\n",
     "print(listaCidades)\n",
     "print(listaCidades.index('Rio de Janeiro'))\n",
+    "print()\n",
     "\n",
-    "print()"
+    "listaBairros = ['Penha', 'Tatuapé', 'Pinheiros']\n",
+    "print(listaBairros)\n",
+    "listaBairros2 = ['Vila Matilde', 'Patriarca']\n",
+    "print(listaBairros2)\n",
+    "listaBairros.extend(listaBairros2)\n",
+    "print(listaBairros)\n",
+    "listaBairros.append('Itaquera')\n",
+    "print(listaBairros)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "listaBairros3 = ['Vila Mariana', 'Santa Cruz']\n",
+    "listaBairros4 = ['Jabaquara', 'Saude']\n",
+    "for item in listaBairros3:\n",
+    "    listaBairros4.append(item)\n",
+    "print(listaBairros4)\n",
+    "del(listaBairros4[1])\n",
+    "print(listaBairros4)\n"
    ]
   }
  ],
