--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -459,7 +459,8 @@
     "    listaBairros4.append(item)\n",
     "print(listaBairros4)\n",
     "del(listaBairros4[1])\n",
-    "print(listaBairros4)\n"
+    "print(listaBairros4)\n",
+    "print()\n"
    ]
   }
  ],
