--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,11 @@
       "\n",
       "['Jabaquara', 'Saude', 'Vila Mariana', 'Santa Cruz']\n",
       "['Jabaquara', 'Vila Mariana', 'Santa Cruz']\n",
-      "<built-in method upper of str object at 0x000001CD1D8A0E70>\n"
+      "\n",
+      "[]\n",
+      "['Itaquera']\n",
+      "['Itaquera', 'Guilhermina', 'Carrão']\n",
+      "1\n"
      ]
     }
    ],
@@ -460,7 +464,17 @@
     "print(listaBairros4)\n",
     "del(listaBairros4[1])\n",
     "print(listaBairros4)\n",
-    "print()\n"
+    "print()\n",
+    "\n",
+    "\n",
+    "listaBairros5 =[]\n",
+    "print(listaBairros5)\n",
+    "listaBairros5.append('Itaquera')\n",
+    "print(listaBairros5)\n",
+    "listaBairros6 = ['Guilhermina', 'Carrão']\n",
+    "listaBairros5.extend(listaBairros6)\n",
+    "print(listaBairros5)\n",
+    "print(listaBairros5.index('Guilhermina'))"
    ]
   }
  ],
