--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,16 @@
       "[]\n",
       "['Itaquera']\n",
       "['Itaquera', 'Guilhermina', 'Carrão']\n",
-      "1\n"
+      "1\n",
+      "\n",
+      "['Cesar', 'Paulo', 'Jady']\n",
+      "['Cesar', 'Paulo', 'Jady', 'Rose']\n",
+      "['Cesar', 'Paulo', 'Jady', 'Rose', 'Marcio', 'Rosa']\n",
+      "4\n",
+      "['Cesar', 'Paulo', 'Jady', 'Maicon', 'Rose', 'Marcio', 'Rosa']\n",
+      "['Cesar', 'Paulo', 'Jady', 'Rose', 'Marcio', 'Rosa']\n",
+      "['Cesar', 'Jady', 'Marcio', 'Paulo', 'Rosa', 'Rose']\n",
+      "['Rose', 'Rosa', 'Paulo', 'Marcio', 'Jady', 'Cesar']\n"
      ]
     }
    ],
@@ -474,7 +483,25 @@
     "listaBairros6 = ['Guilhermina', 'Carrão']\n",
     "listaBairros5.extend(listaBairros6)\n",
     "print(listaBairros5)\n",
-    "print(listaBairros5.index('Guilhermina'))"
+    "print(listaBairros5.index('Guilhermina'))\n",
+    "print()\n",
+    "\n",
+    "listaAlunos = ['Cesar', 'Paulo', 'Jady']\n",
+    "print(listaAlunos)\n",
+    "listaAlunos.append('Rose')\n",
+    "print(listaAlunos)\n",
+    "listaAlunos2 = ['Marcio', 'Rosa']\n",
+    "listaAlunos.extend(listaAlunos2)\n",
+    "print(listaAlunos)\n",
+    "print(listaAlunos.index('Marcio'))\n",
+    "listaAlunos.insert(3, 'Maicon')\n",
+    "print(listaAlunos)\n",
+    "listaAlunos.remove('Maicon')\n",
+    "print(listaAlunos)\n",
+    "listaAlunos.sort()\n",
+    "print(listaAlunos)\n",
+    "listaAlunos.reverse()\n",
+    "print(listaAlunos)\n"
    ]
   }
  ],
