--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -501,7 +501,9 @@
     "listaAlunos.sort()\n",
     "print(listaAlunos)\n",
     "listaAlunos.reverse()\n",
-    "print(listaAlunos)\n"
+    "print(listaAlunos)\n",
+    "print()\n",
+    "\n"
    ]
   }
  ],
