--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,9 +401,11 @@
       "['Cesar', 'Paulo', 'Jady', 'Rose', 'Marcio', 'Rosa']\n",
       "4\n",
       "['Cesar', 'Paulo', 'Jady', 'Maicon', 'Rose', 'Marcio', 'Rosa']\n",
+      "['Cesar', 'Paulo', 'Jady', 'Maicon', 'Rose', 'Marcio', 'Rosa']\n",
       "['Cesar', 'Paulo', 'Jady', 'Rose', 'Marcio', 'Rosa']\n",
       "['Cesar', 'Jady', 'Marcio', 'Paulo', 'Rosa', 'Rose']\n",
-      "['Rose', 'Rosa', 'Paulo', 'Marcio', 'Jady', 'Cesar']\n"
+      "['Rose', 'Rosa', 'Paulo', 'Marcio', 'Jady', 'Cesar']\n",
+      "\n"
      ]
     }
    ],
@@ -496,14 +498,59 @@
     "print(listaAlunos.index('Marcio'))\n",
     "listaAlunos.insert(3, 'Maicon')\n",
     "print(listaAlunos)\n",
+    "listaAlunos.index('Maicon')\n",
+    "print(listaAlunos)\n",
     "listaAlunos.remove('Maicon')\n",
     "print(listaAlunos)\n",
     "listaAlunos.sort()\n",
     "print(listaAlunos)\n",
     "listaAlunos.reverse()\n",
     "print(listaAlunos)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'dict'>\n",
+      "10\n",
+      "33\n",
+      "\n",
+      "{'Pedro': 10, 'Ronaldo': 33, 'Ana': 27, 'Janaina': 45, 'Marcelo': 30}\n",
+      "{'Isis': 54}\n",
+      "{}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dicionários\n",
+    "\n",
+    "estudantes = ['Pedro', 10, 'Ronaldo', 33, 'Ana', 27, 'Janaina', 45]\n",
+    "print(type(estudantes))\n",
+    "estudantes = {'Pedro':10, 'Ronaldo':33, 'Ana':27, 'Janaina':45}\n",
+    "print(type(estudantes))\n",
+    "print(estudantes['Pedro'])\n",
+    "print(estudantes[\"Ronaldo\"])\n",
     "print()\n",
-    "print()\n"
+    "\n",
+    "estudantes['Marcelo'] = 30\n",
+    "print(estudantes)\n",
+    "estudantesVazio = {}\n",
+    "estudantesVazio['Isis'] = 54\n",
+    "print(estudantesVazio)\n",
+    "estudantes.clear()\n",
+    "print(estudantes)\n",
+    "del estudantes\n",
+    "print()\n",
+    "\n"
    ]
   }
  ],
