--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,9 @@
       "{'Pedro': 10, 'Ronaldo': 33, 'Ana': 27, 'Janaina': 45, 'Marcelo': 30}\n",
       "{'Isis': 54}\n",
       "{}\n",
-      "\n"
+      "\n",
+      "{'Gabriel': 10, 'Juliana': 20}\n",
+      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30}\n"
      ]
     }
    ],
@@ -550,7 +552,11 @@
     "print(estudantes)\n",
     "del estudantes\n",
     "print()\n",
-    "\n"
+    "\n",
+    "estudantes2 = {'Gabriel': 10, 'Juliana': 20}\n",
+    "print(estudantes2)\n",
+    "estudantes2['Marcelo'] = 30\n",
+    "print(estudantes2)\n"
    ]
   }
  ],
