--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,8 @@
       "{}\n",
       "\n",
       "{'Gabriel': 10, 'Juliana': 20}\n",
-      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30}\n"
+      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30}\n",
+      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30, 'Marco': 18}\n"
      ]
     }
    ],
@@ -556,6 +557,8 @@
     "estudantes2 = {'Gabriel': 10, 'Juliana': 20}\n",
     "print(estudantes2)\n",
     "estudantes2['Marcelo'] = 30\n",
+    "print(estudantes2)\n",
+    "estudantes2['Marco'] = 18\n",
     "print(estudantes2)\n"
    ]
   }
