--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,10 @@
       "\n",
       "{'Gabriel': 10, 'Juliana': 20}\n",
       "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30}\n",
-      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30, 'Marco': 18}\n"
+      "{'Gabriel': 10, 'Juliana': 20, 'Marcelo': 30, 'Marco': 18}\n",
+      "\n",
+      "{}\n",
+      "{'Lauro': 30}\n"
      ]
     }
    ],
@@ -559,7 +562,13 @@
     "estudantes2['Marcelo'] = 30\n",
     "print(estudantes2)\n",
     "estudantes2['Marco'] = 18\n",
-    "print(estudantes2)\n"
+    "print(estudantes2)\n",
+    "print()\n",
+    "\n",
+    "estudantes3 = {}\n",
+    "print(estudantes3)\n",
+    "estudantes3['Lauro'] = 30 \n",
+    "print(estudantes3)\n"
    ]
   }
  ],
