--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,8 @@
       "['Volkswagen', 'Honda', 'Citroen', 'Hyundai', 'Ford', 'Chevrolet']\n",
       "['Chevrolet', 'Citroen', 'Ford', 'Honda', 'Hyundai', 'Volkswagen']\n",
       "[8, 9, 4, 2, 5, 6, 7, 3, 1]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "\n"
      ]
     }
    ],
@@ -432,7 +433,8 @@
     "listaValores.reverse()\n",
     "print(listaValores)\n",
     "listaValores.sort()\n",
-    "print(listaValores)"
+    "print(listaValores)\n",
+    "print()\n"
    ]
   },
   {
