--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -570,6 +570,86 @@
     "estudantes3['Lauro'] = 30 \n",
     "print(estudantes3)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "None\n",
+      "Hello Bob\n",
+      "Hello Bob\n",
+      "None\n",
+      "Hello Aluno\n",
+      "Hello Aluno\n",
+      "None\n",
+      "Número 0\n",
+      "Número 1\n",
+      "Número 2\n",
+      "Número 3\n",
+      "Número 4\n",
+      "\n",
+      "Primeiro Número: 4\n",
+      "Segundo Número: 7\n",
+      "Soma: 11\n",
+      "\n",
+      "O parâmetro passado foi 5\n",
+      "O parâmetro passado foi 7\n",
+      "O parâmetro passado foi 8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Funções\n",
+    "\n",
+    "def primeiraFunc ():\n",
+    "    print('Hello World')\n",
+    "\n",
+    "print(primeiraFunc())   \n",
+    "\n",
+    "def primeiraFunc():\n",
+    "    nome = 'Bob'\n",
+    "    print(f'Hello {nome}')\n",
+    "\n",
+    "primeiraFunc()\n",
+    "print(primeiraFunc())   \n",
+    "\n",
+    "def segundaFunc(nome):\n",
+    "    print(f'Hello {nome}')\n",
+    "\n",
+    "segundaFunc('Aluno')\n",
+    "print(segundaFunc('Aluno'))\n",
+    "\n",
+    "\n",
+    "def imprimeNumeros():\n",
+    "    for i in range (0, 5, 1):\n",
+    "        print(f'Número {i}')\n",
+    "\n",
+    "imprimeNumeros()     \n",
+    "print()\n",
+    "\n",
+    "def addNum(firstnum, secondnum):\n",
+    "    print(f'Primeiro Número: {firstnum}')\n",
+    "    print(f'Segundo Número: {secondnum}')\n",
+    "    print(f'Soma: {firstnum + secondnum}')\n",
+    "\n",
+    "addNum(4, 7)  \n",
+    "print()  \n",
+    "          \n",
+    "def printVarInfo(*args):\n",
+    "    for item in args:\n",
+    "        print(f'O parâmetro passado foi {item}')\n",
+    "    return\n",
+    "printVarInfo(5, 7, 8)  \n",
+    "print()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
