--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -601,8 +601,20 @@
       "O parâmetro passado foi 5\n",
       "O parâmetro passado foi 7\n",
       "O parâmetro passado foi 8\n",
-      "\n"
+      "\n",
+      "10\n",
+      "28\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'14'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -648,7 +660,100 @@
     "    return\n",
     "printVarInfo(5, 7, 8)  \n",
     "print()\n",
+    "\n",
+    "var_global = 10\n",
+    "\n",
+    "def multiplica_numeros(num1, num2):\n",
+    "    var_global = num1 * num2\n",
+    "    print(var_global)\n",
+    "\n",
+    "print(var_global)\n",
+    "multiplica_numeros(4, 7)\n",
+    "\n",
+    "# Funções Built-in\n",
+    "\n",
+    "abs(-56)\n",
+    "str(14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " A idade dela é 33\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "123"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idade = int(input('Digite a sua idade: '))\n",
+    "print(f' A idade dela é {idade}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(float('123.345'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.exp2(8)\n",
+    "print()\n",
+    "math.sqrt(64)"
    ]
   }
  ],
