--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -727,23 +727,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "8.0"
+       "24"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +755,9 @@
     "math.exp2(8)\n",
     "print()\n",
     "math.sqrt(64)\n",
-    "print()"
+    "print()\n",
+    "math.cos(0)\n",
+    "math.factorial(4)"
    ]
   }
  ],
