--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -757,7 +757,67 @@
     "math.sqrt(64)\n",
     "print()\n",
     "math.cos(0)\n",
-    "math.factorial(4)"
+    "math.factorial(4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esta', 'função', 'será', 'útil', 'para', 'separar', 'grandes', 'volumes', 'de', 'dados']\n",
+      "H\n",
+      "O\n",
+      "J\n",
+      "E\n",
+      " \n",
+      "E\n",
+      "U\n",
+      " \n",
+      "A\n",
+      "I\n",
+      "N\n",
+      "D\n",
+      "A\n",
+      " \n",
+      "N\n",
+      "Ã\n",
+      "O\n",
+      " \n",
+      "T\n",
+      "O\n",
+      "M\n",
+      "E\n",
+      "I\n",
+      " \n",
+      "B\n",
+      "A\n",
+      "N\n",
+      "H\n",
+      "O\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def split_string_palavras(text):\n",
+    "    return text.split(\" \")\n",
+    "\n",
+    "texto = \"Esta função será útil para separar grandes volumes de dados\"\n",
+    "print(split_string_palavras(texto))\n",
+    "\n",
+    "texto2 = \"Hoje eu ainda não tomei banho\"\n",
+    "\n",
+    "def split_string_letras(text):\n",
+    "    t = text.upper()\n",
+    "    for letra in t:\n",
+    "        print(letra)\n",
+    "\n",
+    "print(split_string_letras(texto2))        "
    ]
   }
  ],
