--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -799,6 +799,32 @@
       "N\n",
       "H\n",
       "O\n",
+      "None\n",
+      "q\n",
+      "u\n",
+      "a\n",
+      "n\n",
+      "t\n",
+      "a\n",
+      "s\n",
+      " \n",
+      "v\n",
+      "e\n",
+      "z\n",
+      "e\n",
+      "s\n",
+      " \n",
+      "e\n",
+      "u\n",
+      " \n",
+      "e\n",
+      "s\n",
+      "c\n",
+      "r\n",
+      "e\n",
+      "v\n",
+      "i\n",
+      "?\n",
       "None\n"
      ]
     }
@@ -817,8 +843,65 @@
     "    for letra in t:\n",
     "        print(letra)\n",
     "\n",
-    "print(split_string_letras(texto2))        "
+    "print(split_string_letras(texto2))  \n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q\n",
+      "u\n",
+      "a\n",
+      "n\n",
+      "t\n",
+      "a\n",
+      "s\n",
+      " \n",
+      "v\n",
+      "e\n",
+      "z\n",
+      "e\n",
+      "s\n",
+      " \n",
+      "e\n",
+      "u\n",
+      " \n",
+      "e\n",
+      "s\n",
+      "c\n",
+      "r\n",
+      "e\n",
+      "v\n",
+      "i\n",
+      "?\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "textinho = \"QUANTAS VEZES EU ESCREVI?\"\n",
+    "def splitzinho(text):\n",
+    "    p = text.lower()\n",
+    "    for letra in p:\n",
+    "        print(letra)\n",
+    "\n",
+    "print(splitzinho(textinho))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
