--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -898,10 +898,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "144\n",
+      "25\n",
+      "9\n",
+      "False\n",
+      "True\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def potencia(num):\n",
+    "    resultado = num ** 2\n",
+    "    return resultado\n",
+    "\n",
+    "print(potencia(10))\n",
+    "\n",
+    "def potencia(num):\n",
+    "    return num ** 2\n",
+    "\n",
+    "print(potencia(12))\n",
+    "\n",
+    "def potencia(num): return num ** 2\n",
+    "\n",
+    "print(potencia(5))\n",
+    "\n",
+    "potencia = lambda num: num ** 2\n",
+    "\n",
+    "print(potencia(3))\n",
+    "\n",
+    "par = lambda x: x % 2 == 0\n",
+    "print(par(5))\n",
+    "print(par(8))\n",
+    "\n",
+    "addNum = lambda x,y: x+y\n",
+    "\n",
+    "print(addNum(4,7))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "[x for x in range(10)]\n",
+    "\n",
+    "lista_numeros = [x for x in range(10)]\n",
+    "print(lista_numeros)\n",
+    "\n",
+    "lista_numeros = [x for x in range(10) if x < 5]\n",
+    "print(lista_numeros)"
+   ]
   }
  ],
  "metadata": {
