--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,12 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "[0, 1, 2, 3, 4]\n"
+      "[0, 1, 2, 3, 4]\n",
+      "['melancia', 'manga']\n",
+      "['melancia', 'manga']\n",
+      "{'Gabriel': 54, 'Marcos': 44, 'Ruy': 76, 'Manoel': 88}\n",
+      "{'Ruy': 76, 'Manoel': 88}\n",
+      "{'Gabriel': 'Reprovado', 'Marcos': 'Reprovado', 'Ruy': 'Aprovado', 'Manoel': 'Aprovado'}\n"
      ]
     }
    ],
@@ -965,7 +970,28 @@
     "print(lista_numeros)\n",
     "\n",
     "lista_numeros = [x for x in range(10) if x < 5]\n",
-    "print(lista_numeros)"
+    "print(lista_numeros)\n",
+    "\n",
+    "lista_frutas = ['banana', 'melancia', 'cereja', 'manga', 'abacate']\n",
+    "nova_lista = []\n",
+    "for x in lista_frutas:\n",
+    "    if 'm' in x:\n",
+    "        nova_lista.append(x)\n",
+    "print(nova_lista)        \n",
+    "\n",
+    "nova_lista = [x for x in lista_frutas if 'm' in x]\n",
+    "print(nova_lista)\n",
+    "\n",
+    "dict_alunos = {'Gabriel': 54, 'Marcos': 44, 'Ruy': 76, 'Manoel': 88}\n",
+    "dict_alunos_status = {k:v for (k, v) in dict_alunos.items()}\n",
+    "print(dict_alunos_status)\n",
+    "\n",
+    "dict_alunos_status = {k:v for (k, v) in dict_alunos.items() if v > 60}\n",
+    "print(dict_alunos_status)\n",
+    "\n",
+    "dict_alunos = {'Gabriel': 54, 'Marcos': 44, 'Ruy': 76, 'Manoel': 88}\n",
+    "dict_alunos_status = {k:('Aprovado' if v > 70 else 'Reprovado') for (k,v) in dict_alunos.items()}\n",
+    "print(dict_alunos_status)\n"
    ]
   }
  ],
