--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -993,6 +993,30 @@
     "dict_alunos_status = {k:('Aprovado' if v > 70 else 'Reprovado') for (k,v) in dict_alunos.items()}\n",
     "print(dict_alunos_status)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Andressa', 'Helio']\n",
+      "{'kamila': 41, 'Coelho': 49}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_normal = ['Lucas', 'Andressa', 'Nivaldo', 'Helio']\n",
+    "lista_especial = [x for x in lista_normal if 'e' in x]\n",
+    "print(lista_especial)\n",
+    "\n",
+    "dict_normal = {'kamila': 41, 'Galisteu': 54, 'Coelho': 49}\n",
+    "dict_especial = {k:v for (k,v) in dict_normal.items() if v > 40 and v < 50}\n",
+    "print(dict_especial)"
+   ]
   }
  ],
  "metadata": {
