--- a/Curso Python - Nível Introdutório/REVISÃO.ipynb
+++ b/Curso Python - Nível Introdutório/REVISÃO.ipynb
@@ -1017,6 +1017,66 @@
     "dict_especial = {k:v for (k,v) in dict_normal.items() if v > 40 and v < 50}\n",
     "print(dict_especial)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selecione o número da ação desejada:\n",
+      "\n",
+      "1 - Soma\n",
+      "2 - Subtração\n",
+      "3 - Multiplicação\n",
+      "4 - Divisão\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'primeiro' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[100], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m operacao \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite sua opção (1/2/3/4): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moperacao\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m---> 11\u001b[0m primeiro \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite o primeiro número: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mprimeiro\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m     13\u001b[0m segundo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDigite o segundo número: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msegundo\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'primeiro' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print('Selecione o número da ação desejada:')\n",
+    "print()\n",
+    "print('1 - Soma')\n",
+    "print('2 - Subtração')\n",
+    "print('3 - Multiplicação')\n",
+    "print('4 - Divisão')\n",
+    "print()\n",
+    "\n",
+    "operacao = int(input(f'Digite sua opção (1/2/3/4): {operacao}'))\n",
+    "print()\n",
+    "primeiro = float(input(f'Digite o primeiro número: {primeiro}'))\n",
+    "print()\n",
+    "segundo = float(input(f'Digite o segundo número: {segundo}'))\n",
+    "print()\n",
+    "\n",
+    "def calculadora(primeiro, segundo):\n",
+    "    if operacao == 1:\n",
+    "        soma = primeiro + segundo\n",
+    "        print(f'{primeiro}+{segundo}={soma}')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
